helloworld/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webgoat-ingress
  namespace: webgoat
  annotations:
    kubernetes.io/ingress.class: "nginx"
    appprotect.f5.com/app-protect-policy: "webgoat-policy"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "logconf-elk"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=syslog-svc.syslog:514"
spec:
  rules:
  - host: microservice-security.101.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: owasp-webgoat
            port:
              number: 8080
